add skeleton for HR dashboard page

--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -72,6 +72,7 @@
   <h3 class="heading-medium">Day to day</h3>
   <ul>
     <li><a href="/being_a_civil_servant/addreceipt">add receipt (not complete)</a></li>
+    <li><a href="/signup/hr_dashboard">HR dashboard (not complete)</a></li>
   </ul>
 
   <h3 class="heading-medium">Performance</h3>
