add move skeleton files for the hr dashboard

--- a/application/signup/templates/hr_dashboard.html
+++ b/application/signup/templates/hr_dashboard.html
@@ -1,4 +1,14 @@
-{% extends "signup_layout.html" %}
+{% extends "hr_layout.html" %}
 {% block content %}
+
+<main id="content">
+
+  <nav class="breadcrumb">
+    <ol>
+      <li>Government</li>
+    </ol>
+  </nav>
+
+</main>
 
 {% endblock %}
