add key metrics to dashboard

--- a/application/signup/templates/hr_dashboard.html
+++ b/application/signup/templates/hr_dashboard.html
@@ -5,9 +5,29 @@
 
   <nav class="breadcrumb">
     <ol>
-      <li>Government</li>
+      <li><a href="">Government</a></li>
     </ol>
   </nav>
+
+  <section class="component">
+    <div class="grid-row">
+      <div class="column-third key-metric">
+        <h2 class="heading-medium key-metric__name">Headcount</h2>
+        <div class="figure key-metric__value">445,310</div>
+        <a href="" class="key-metric__more">view details</a>
+      </div>
+      <div class="column-third key-metric">
+        <h2 class="heading-medium key-metric__name">FTE</h2>
+        <div class="figure key-metric__value">410,710</div>
+        <a href="" class="key-metric__more">view details</a>
+      </div>
+      <div class="column-third key-metric">
+        <h2 class="heading-medium key-metric__name">Payroll cost</h2>
+        <div class="figure key-metric__value">£17.5bn</div>
+        <a href="" class="key-metric__more">view details</a>
+      </div>
+    </div>
+  </section>
 
 </main>
 
