--- a/application/signup/templates/hr_dashboard.html
+++ b/application/signup/templates/hr_dashboard.html
@@ -29,6 +29,16 @@
     </div>
   </section>
 
+  <div class="grid-row grid-row--no-margin">
+    <div class="component column-quarter">
+      <ul class="side-menu">
+        <li><a href="">People</a></li>
+        <li><a href="">Cost</a></li>
+        <li><a href="">Capability</a></li>
+      </ul>
+    </div>
+  </div>
+
 </main>
 
 {% endblock %}
