components should sit in grid elements

--- a/application/signup/templates/hr_dashboard.html
+++ b/application/signup/templates/hr_dashboard.html
@@ -29,13 +29,21 @@
     </div>
   </section>
 
-  <div class="grid-row grid-row--no-margin">
-    <div class="component column-quarter">
-      <ul class="side-menu">
-        <li><a href="">People</a></li>
-        <li><a href="">Cost</a></li>
-        <li><a href="">Capability</a></li>
-      </ul>
+  <div class="grid-row">
+    <div class="column-quarter">
+      <div class="component ">
+        <ul class="side-menu">
+          <li><a href="">People</a></li>
+          <li><a href="">Cost</a></li>
+          <li><a href="">Capability</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="column-three-quarter">
+      <div class="component">
+        some content
+      </div>
     </div>
   </div>
 
