--- a/application/signup/templates/hr_dashboard.html
+++ b/application/signup/templates/hr_dashboard.html
@@ -3,41 +3,13 @@
 
 <main id="content">
 
-  <nav class="breadcrumb">
-    <ol>
-      <li><a href="">Government</a></li>
-    </ol>
-  </nav>
+  {% include "hr_partials/breadcrumb.html" ignore missing %}
 
-  <section class="component">
-    <div class="grid-row">
-      <div class="column-third key-metric">
-        <h2 class="heading-medium key-metric__name">Headcount</h2>
-        <div class="figure key-metric__value">445,310</div>
-        <a href="" class="key-metric__more">view details</a>
-      </div>
-      <div class="column-third key-metric">
-        <h2 class="heading-medium key-metric__name">FTE</h2>
-        <div class="figure key-metric__value">410,710</div>
-        <a href="" class="key-metric__more">view details</a>
-      </div>
-      <div class="column-third key-metric">
-        <h2 class="heading-medium key-metric__name">Payroll cost</h2>
-        <div class="figure key-metric__value">£17.5bn</div>
-        <a href="" class="key-metric__more">view details</a>
-      </div>
-    </div>
-  </section>
+  {% include "hr_partials/key-metrics.html" ignore missing %}
 
   <div class="grid-row">
     <div class="column-quarter">
-      <div class="component ">
-        <ul class="side-menu">
-          <li><a href="">People</a></li>
-          <li><a href="">Cost</a></li>
-          <li><a href="">Capability</a></li>
-        </ul>
-      </div>
+      {% include "hr_partials/side-menu.html" ignore missing %}
     </div>
 
     <div class="column-three-quarter">
