--- a/application/signup/static/css/hr.scss
+++ b/application/signup/static/css/hr.scss
@@ -27,6 +27,12 @@ body {
   margin: 0;
 }
 
+%active {
+  background: $light-blue;
+
+  a, a:visited { color: $page-colour; }
+}
+
 .side-menu {
   .side-menu__item {
     margin: 0;
@@ -39,22 +45,7 @@ body {
       @include link($colour: $tc, $hover-colour: $tc, $visited-colour: $tc, $hover-decoration: none);
     }
 
-    .side-menu__item--active,
-    &:hover {
-      background: $light-blue;
-
-      a {
-        color: $page-colour;
-      }
-    }
-  }
-  .side-menu__item--active {
-    background: $light-blue;
-
-    a {
-      color: $page-colour;
-
-      &:visited { color: $page-colour; }
-    }
+    &:hover { @extend %active; }
+    &.side-menu__item--active { @extend %active; }
   }
 }
