--- a/application/signup/templates/hr_partials/side-menu.html
+++ b/application/signup/templates/hr_partials/side-menu.html
@@ -1,17 +1,17 @@
 <div class="component ">
   <ul class="side-menu">
     {% if page == "people" %}
-    <li class="side-menu__item side-menu__item--active"><a href="">People</a></li>
-    <li class="side-menu__item"><a href="">Cost</a></li>
-    <li class="side-menu__item"><a href="">Capability</a></li>
+    <li class="side-menu__item side-menu__item--active"><a href="hr_dashboard">People</a></li>
+    <li class="side-menu__item"><a href="hr_dashboard_cost">Cost</a></li>
+    <li class="side-menu__item"><a href="hr_dashboard_capability">Capability</a></li>
     {% elif page == "cost" %}
-    <li class="side-menu__item"><a href="">People</a></li>
-    <li class="side-menu__item side-menu__item--active"><a href="">Cost</a></li>
-    <li class="side-menu__item"><a href="">Capability</a></li>
+    <li class="side-menu__item"><a href="hr_dashboard">People</a></li>
+    <li class="side-menu__item side-menu__item--active"><a href="hr_dashboard_cost">Cost</a></li>
+    <li class="side-menu__item"><a href="hr_dashboard_capability">Capability</a></li>
     {% else %}
-    <li class="side-menu__item"><a href="">People</a></li>
-    <li class="side-menu__item"><a href="">Cost</a></li>
-    <li class="side-menu__item side-menu__item--active"><a href="">Capability</a></li>
+    <li class="side-menu__item"><a href="hr_dashboard">People</a></li>
+    <li class="side-menu__item"><a href="hr_dashboard_cost">Cost</a></li>
+    <li class="side-menu__item side-menu__item--active"><a href="hr_dashboard_capability">Capability</a></li>
     {% endif %}
   </ul>
 </div>
