--- a/application/signup/static/css/common/_typography_ext.scss
+++ b/application/signup/static/css/common/_typography_ext.scss
@@ -54,3 +54,20 @@
     display: block;
   }
 }
+
+// An inline definition list - name:value pairs for example
+
+/* dd */.definition-inline {
+  @extend %contain-floats;
+  dt {
+    clear: left;
+    float: left;
+    margin-right: $gutter-half;
+    &:after {
+      content: ':';
+    }
+  }
+  dd {
+    float: left;
+  }
+}
