--- a/application/signup/templates/hr_dashboard.html
+++ b/application/signup/templates/hr_dashboard.html
@@ -15,211 +15,218 @@
     <div class="column-three-quarter">
       <div class="component">
 
-        <h3 class="heading-medium">Headcount</h3>
+        <div class="dashboard__grouping">
+          <h3 class="heading-medium">Headcount</h3>
+          <div class="grid-row">
+            <div class="column-third metric">
+              <h3 class="heading-small">FTE</h3>
+              <span>400000</span>
+              <div class="grid-row">
+                <div class="column-half">
+                  <dl class="target--down">
+                    <dt>Target</dt>
+                    <dd>3.8%</dd>
+                  </dl>
+                </div>
+                <div class="column-half">
+                  <dl>
+                    <dt>Last Year</dt>
+                    <dd>2.0%</dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+            <div class="column-third metric">
+              <h3 class="heading-small">Attendance</h3>
+              <span>95%</span>
+              <div class="grid-row">
+                <div class="column-half">
+                  <dl>
+                    <dt>Target</dt>
+                    <dd>96%</dd>
+                  </dl>
+                </div>
+                <div class="column-half">
+                  <dl>
+                    <dt>Last Year</dt>
+                    <dd>94%</dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+            <div class="column-third metric">
+              <h3 class="heading-small">Sabbatical</h3>
+              <span>2,368</span>
+              <div class="grid-row">
+                <div class="column-half">
+                  <dl>
+                    <dt></dt>
+                    <dd></dd>
+                  </dl>
+                </div>
+                <div class="column-half">
+                  <dl>
+                    <dt></dt>
+                    <dd></dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+          </div><!-- end grid-row -->
+        </div>
+
+        <div class="dashboard__grouping">
+          <h3 class="heading-medium">Change</h3>
+          <div class="grid-row">
+            <div class="column-third metric">
+              <h3 class="heading-small">Employee churn</h3>
+              <span>5.4%</span>
+              <div class="grid-row">
+                <div class="column-half">
+                  <dl>
+                    <dt>Target</dt>
+                    <dd>4%</dd>
+                  </dl>
+                </div>
+                <div class="column-half">
+                  <dl>
+                    <dt>Last Year</dt>
+                    <dd>5.2%</dd>
+                  </dl>
+                </div>
+              </div>
+            </div><!-- end metric -->
+            <div class="column-third metric">
+              <h3 class="heading-small">Avg. duration</h3>
+              <span>8.3 yr</span>
+            </div><!-- end metric -->
+            <div class="column-third metric">
+              <h3 class="heading-small">Speed to hire</h3>
+              <span>103 days</span>
+              <div class="grid-row">
+                <div class="column-half">
+                  <dl>
+                    <dt>Target</dt>
+                    <dd>85 days</dd>
+                  </dl>
+                </div>
+                <div class="column-half">
+                  <dl>
+                    <dt>Last Year</dt>
+                    <dd>108 days</dd>
+                  </dl>
+                </div>
+              </div>
+          </div><!-- end metric -->
+        </div><!-- end grid-row -->
+      </div>
+
+
+      <div class="dashboard__grouping">
+        <h3 class="heading-medium">Distribution</h3>
         <div class="grid-row">
           <div class="column-third metric">
-            <h3 class="heading-small">FTE</h3>
-            <span>400000</span>
+            <h3 class="heading-small">Gender</h3>
+            <div class="grid-row">
+              <div class="column-half">
+                <dl>
+                  <dt>Male</dt>
+                  <dd>56%</dd>
+                </dl>
+              </div>
+              <div class="column-half">
+                <dl>
+                  <dt>Female</dt>
+                  <dd>44%</dd>
+                </dl>
+              </div>
+            </div>
+          </div><!-- end metric -->
+
+          <div class="column-third metric">
+            <h3 class="heading-small">Avg. Age</h3>
+            <span>41.3 yr</span>
+          </div><!-- end metric -->
+
+          <div class="column-third metric">
+            <h3 class="heading-small">Top Locations</h3>
+            <dl class="definition-inline">
+              <dt>London</dt>
+              <dd>18%</dd>
+              <dt>Newcastle</dt>
+              <dd>10%</dd>
+              <dt>Swansea</dt>
+              <dd>8.3%</dd>
+            </dl>
+          </div><!-- end metric -->
+
+        </div><!-- end grid-row -->
+      </div>
+
+      <div class="dashboard__grouping">
+        <h3 class="heading-medium">Future</h3>
+
+        <div class="grid-row">
+
+          <div class="column-third metric">
+            <h3 class="heading-small">Promotion rate</h3>
+            <span>6.8%</span>
             <div class="grid-row">
               <div class="column-half">
                 <dl class="target--down">
                   <dt>Target</dt>
-                  <dd>3.8%</dd>
+                  <dd>7.2%</dd>
                 </dl>
               </div>
               <div class="column-half">
                 <dl>
                   <dt>Last Year</dt>
-                  <dd>2.0%</dd>
+                  <dd>5.4%</dd>
                 </dl>
               </div>
             </div>
-          </div>
+          </div><!-- end metric -->
+
           <div class="column-third metric">
-            <h3 class="heading-small">Attendance</h3>
-            <span>95%</span>
+            <h3 class="heading-small">Faststreamers</h3>
+            <span>854</span>
             <div class="grid-row">
               <div class="column-half">
                 <dl>
                   <dt>Target</dt>
-                  <dd>96%</dd>
+                  <dd>900</dd>
                 </dl>
               </div>
               <div class="column-half">
                 <dl>
                   <dt>Last Year</dt>
-                  <dd>94%</dd>
+                  <dd>700</dd>
                 </dl>
               </div>
             </div>
-          </div>
+          </div><!-- end metric -->
+
           <div class="column-third metric">
-            <h3 class="heading-small">Sabbatical</h3>
-            <span>2,368</span>
+            <h3 class="heading-small">Apprentices</h3>
+            <span>209</span>
             <div class="grid-row">
               <div class="column-half">
                 <dl>
-                  <dt></dt>
-                  <dd></dd>
+                  <dt>Target</dt>
+                  <dd>350</dd>
                 </dl>
               </div>
               <div class="column-half">
                 <dl>
-                  <dt></dt>
-                  <dd></dd>
+                  <dt>Last year</dt>
+                  <dd>232</dd>
                 </dl>
               </div>
             </div>
-          </div>
+          </div><!-- end metric -->
+
         </div><!-- end grid-row -->
-
-        <h3 class="heading-medium">Change</h3>
-        <div class="grid-row">
-          <div class="column-third metric">
-            <h3 class="heading-small">Employee churn</h3>
-            <span>5.4%</span>
-            <div class="grid-row">
-              <div class="column-half">
-                <dl>
-                  <dt>Target</dt>
-                  <dd>4%</dd>
-                </dl>
-              </div>
-              <div class="column-half">
-                <dl>
-                  <dt>Last Year</dt>
-                  <dd>5.2%</dd>
-                </dl>
-              </div>
-            </div>
-          </div><!-- end metric -->
-          <div class="column-third metric">
-            <h3 class="heading-small">Avg. duration</h3>
-            <span>8.3 yr</span>
-          </div><!-- end metric -->
-          <div class="column-third metric">
-            <h3 class="heading-small">Speed to hire</h3>
-            <span>103 days</span>
-            <div class="grid-row">
-              <div class="column-half">
-                <dl>
-                  <dt>Target</dt>
-                  <dd>85 days</dd>
-                </dl>
-              </div>
-              <div class="column-half">
-                <dl>
-                  <dt>Last Year</dt>
-                  <dd>108 days</dd>
-                </dl>
-              </div>
-            </div>
-        </div><!-- end metric -->
-      </div><!-- end grid-row -->
-
-
-      <h3 class="heading-medium">Distribution</h3>
-      <div class="grid-row">
-        <div class="column-third metric">
-          <h3 class="heading-small">Gender</h3>
-          <div class="grid-row">
-            <div class="column-half">
-              <dl>
-                <dt>Male</dt>
-                <dd>56%</dd>
-              </dl>
-            </div>
-            <div class="column-half">
-              <dl>
-                <dt>Female</dt>
-                <dd>44%</dd>
-              </dl>
-            </div>
-          </div>
-        </div><!-- end metric -->
-
-        <div class="column-third metric">
-          <h3 class="heading-small">Avg. Age</h3>
-          <span>41.3 yr</span>
-        </div><!-- end metric -->
-
-        <div class="column-third metric">
-          <h3 class="heading-small">Top Locations</h3>
-          <dl>
-            <dt>London</dt>
-            <dd>18%</dd>
-            <dt>Newcastle</dt>
-            <dd>10%</dd>
-            <dt>Swansea</dt>
-            <dd>8.3%</dd>
-          </dl>
-        </div><!-- end metric -->
-
-      </div><!-- end grid-row -->
-
-
-      <h3 class="heading-medium">Future</h3>
-
-      <div class="grid-row">
-
-        <div class="column-third metric">
-          <h3 class="heading-small">Promotion rate</h3>
-          <span>6.8%</span>
-          <div class="grid-row">
-            <div class="column-half">
-              <dl class="target--down">
-                <dt>Target</dt>
-                <dd>7.2%</dd>
-              </dl>
-            </div>
-            <div class="column-half">
-              <dl>
-                <dt>Last Year</dt>
-                <dd>5.4%</dd>
-              </dl>
-            </div>
-          </div>
-        </div><!-- end metric -->
-
-        <div class="column-third metric">
-          <h3 class="heading-small">Faststreamers</h3>
-          <span>854</span>
-          <div class="grid-row">
-            <div class="column-half">
-              <dl>
-                <dt>Target</dt>
-                <dd>900</dd>
-              </dl>
-            </div>
-            <div class="column-half">
-              <dl>
-                <dt>Last Year</dt>
-                <dd>700</dd>
-              </dl>
-            </div>
-          </div>
-        </div><!-- end metric -->
-
-        <div class="column-third metric">
-          <h3 class="heading-small">Apprentices</h3>
-          <span>209</span>
-          <div class="grid-row">
-            <div class="column-half">
-              <dl>
-                <dt>Target</dt>
-                <dd>350</dd>
-              </dl>
-            </div>
-            <div class="column-half">
-              <dl>
-                <dt>Last year</dt>
-                <dd>232</dd>
-              </dl>
-            </div>
-          </div>
-        </div><!-- end metric -->
-
-      </div><!-- end grid-row -->
+      </div>
 
     </div>
   </div>
