--- a/application/signup/templates/hr_dashboard.html
+++ b/application/signup/templates/hr_dashboard.html
@@ -17,10 +17,10 @@
 
         <div class="dashboard__grouping">
           <h3 class="heading-medium">Headcount</h3>
-          <div class="grid-row">
+          <div class="grid-row metric__group">
             <div class="column-third metric">
               <h3 class="heading-small">FTE</h3>
-              <span>400000</span>
+              <span class="metric__value">400000</span>
               <div class="grid-row">
                 <div class="column-half">
                   <dl class="target--down">
@@ -38,7 +38,7 @@
             </div>
             <div class="column-third metric">
               <h3 class="heading-small">Attendance</h3>
-              <span>95%</span>
+              <span class="metric__value">95%</span>
               <div class="grid-row">
                 <div class="column-half">
                   <dl>
@@ -56,7 +56,7 @@
             </div>
             <div class="column-third metric">
               <h3 class="heading-small">Sabbatical</h3>
-              <span>2,368</span>
+              <span class="metric__value">2,368</span>
               <div class="grid-row">
                 <div class="column-half">
                   <dl>
@@ -77,10 +77,10 @@
 
         <div class="dashboard__grouping">
           <h3 class="heading-medium">Change</h3>
-          <div class="grid-row">
+          <div class="grid-row metric__group">
             <div class="column-third metric">
               <h3 class="heading-small">Employee churn</h3>
-              <span>5.4%</span>
+              <span class="metric__value">5.4%</span>
               <div class="grid-row">
                 <div class="column-half">
                   <dl>
@@ -98,11 +98,11 @@
             </div><!-- end metric -->
             <div class="column-third metric">
               <h3 class="heading-small">Avg. duration</h3>
-              <span>8.3 yr</span>
+              <span class="metric__value">8.3 yr</span>
             </div><!-- end metric -->
             <div class="column-third metric">
               <h3 class="heading-small">Speed to hire</h3>
-              <span>103 days</span>
+              <span class="metric__value">103 days</span>
               <div class="grid-row">
                 <div class="column-half">
                   <dl>
@@ -124,7 +124,7 @@
 
       <div class="dashboard__grouping">
         <h3 class="heading-medium">Distribution</h3>
-        <div class="grid-row">
+        <div class="grid-row metric__group">
           <div class="column-third metric">
             <h3 class="heading-small">Gender</h3>
             <div class="grid-row">
@@ -145,7 +145,7 @@
 
           <div class="column-third metric">
             <h3 class="heading-small">Avg. Age</h3>
-            <span>41.3 yr</span>
+            <span class="metric__value">41.3 yr</span>
           </div><!-- end metric -->
 
           <div class="column-third metric">
@@ -166,11 +166,11 @@
       <div class="dashboard__grouping">
         <h3 class="heading-medium">Future</h3>
 
-        <div class="grid-row">
+        <div class="grid-row metric__group">
 
           <div class="column-third metric">
             <h3 class="heading-small">Promotion rate</h3>
-            <span>6.8%</span>
+            <span class="metric__value">6.8%</span>
             <div class="grid-row">
               <div class="column-half">
                 <dl class="target--down">
@@ -189,7 +189,7 @@
 
           <div class="column-third metric">
             <h3 class="heading-small">Faststreamers</h3>
-            <span>854</span>
+            <span class="metric__value">854</span>
             <div class="grid-row">
               <div class="column-half">
                 <dl>
@@ -208,7 +208,7 @@
 
           <div class="column-third metric">
             <h3 class="heading-small">Apprentices</h3>
-            <span>209</span>
+            <span class="metric__value">209</span>
             <div class="grid-row">
               <div class="column-half">
                 <dl>
