--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -10,6 +10,12 @@
 
   <h2 class="heading-large">Prototypes</h2>
 
+  <ul>
+    <li>
+      <a href="/profile/magic">Reset user profile</a>
+    </li>
+  </ul>
+
   <h3 class="heading-medium">Profile</h3>
   <ul>
     <li>
