fix broken link

--- a/application/jobs/templates/review.html
+++ b/application/jobs/templates/review.html
@@ -88,7 +88,7 @@
 
     <!-- Primary buttons, secondary links -->
     <div class="form-group">
-      <input type="submit" class="button" value="Complete">
+      <a href="/signup/csprofile_perf" class="button">Complete</a>
       <ul>
         <li><a href="/signup/csprofile_perf">Back</a></li>
       </ul>
