--- a/application/signup/templates/partials/profile/next-meeting.html
+++ b/application/signup/templates/partials/profile/next-meeting.html
@@ -1,6 +1,6 @@
 <div class="grid-row next-meeting">
-  <div class="column-third next-meeting__map"><img src="/static/images/location_pin.svg" alt="" /></div>
-  <div class="column-two-thirds next-meeting__details__wrap">
+  <div class="column-third--static next-meeting__map"><img src="/static/images/location_pin.svg" alt="" /></div>
+  <div class="column-two-thirds--static next-meeting__details__wrap">
     <ul class="next-meeting__details">
       <li><h3 class="next-meeting__heading">Next meeting</h3></li>
       <li class="visuallyhidden" itemprop="categories">MEETING</li>
