--- a/application/signup/templates/partials/expenses_widget.html
+++ b/application/signup/templates/partials/expenses_widget.html
@@ -2,22 +2,33 @@
   <h3 class="heading-medium component__head">Expenses</h3>
   <a href="/being_a_civil_servant/addreceipt" class="foot-link">view details</a>
   <div class="">
-    <div class="grid-row">
-      <div class="column-two-thirds">Pending items</div>
-      <div class="column-third info__item">2</div>
+    <table class="table--borderless">
+      <tbody>
+        <tr>
+          <td>Pending items</td>
+          <td class="numeric cell--highlight">2</td>
+        </tr>
+        <tr>
+          <td>Approved items</td>
+          <td class="numeric cell--highlight">2</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div class="expenses__totals">
+      <table class="table--borderless">
+        <tbody>
+          <tr>
+            <td>Total owed</td>
+            <td class="numeric cell--highlight">£397</td>
+          </tr>
+          <tr>
+            <td>Payment due</td>
+            <td class="numeric cell--highlight">2nd June</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <div class="grid-row">
-      <div class="column-two-thirds">Approved items</div>
-      <div class="column-third info__item">2</div>
-    </div>
-    <div class="expenses__totals"><div class="grid-row">
-      <div class="column-two-thirds">Total owed</div>
-      <div class="column-third info__item">£397</div>
-    </div>
-    <div class="grid-row">
-      <div class="column-two-thirds">Payment due</div>
-      <div class="column-third info__item">2nd Jun</div>
-    </div></div>
-    
+
   </div>
 </div>
