--- a/application/signup/templates/partials/profile/equip_component.html
+++ b/application/signup/templates/partials/profile/equip_component.html
@@ -1,5 +1,5 @@
 <h3 class="heading-medium component__head">Equipment</h3>
-<table>
+<table class="table--borderless">
   <thead>
     <tr>
       <th></th>
@@ -20,11 +20,12 @@
     </tr>
   </tbody>
 </table>
+
 <div class="grid-row">
-  <div class="column-half">
+  <div class="column-half--static">
     <button class="secondary--btn">Repair</button>
   </div>
-  <div class="column-half align-right">
+  <div class="column-half--static align-right">
     <button class="secondary--btn">Renew</button>
   </div>
 </div>
