add mini-profile wrapper to jobs sections

--- a/application/signup/templates/partials/jobs_profile.html
+++ b/application/signup/templates/partials/jobs_profile.html
@@ -1,6 +1,8 @@
-<h5 class="heading-small">Colm Britton</h5>
-<ul class="job__info">
-  <li>Front-end designer</li>
-  <li>Cross government tools</li>
-  <li>0 Applications</li>
-</ul>
+<section class="mini-profile__wrap">
+  <h5 class="heading-small">Colm Britton</h5>
+  <ul class="job__info">
+    <li>Front-end designer</li>
+    <li>Cross government tools</li>
+    <li>0 Applications</li>
+  </ul>
+</section>
