tweak perf mini-profile

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -49,6 +49,10 @@ table + .grid-row {
   margin-top: $gutter-half;
 }
 
+.job__info {
+  margin-bottom: 10px;
+}
+
 .key-info__wrap {
   padding: 5px;
   td {
