--- a/application/signup/templates/partials/perf_profile.html
+++ b/application/signup/templates/partials/perf_profile.html
@@ -5,9 +5,9 @@
     <li>Grade A</li>
   </ul>
   <dl>
-    <dt>Last review:</dt>
+    <dt class="secondary">Last review:</dt>
     <dd>20th Mar 2015</dd>
-    <dt>Next review:</dt>
+    <dt class="secondary">Next review:</dt>
     <dd>17th Jul 2015</dd>
   </dl>
 </section>
