--- a/application/signup/static/css/components/_side-menu.scss
+++ b/application/signup/static/css/components/_side-menu.scss
@@ -1,11 +1,32 @@
 .side-menu {
-  
+  @extend %contain-floats;
+  margin-top: -10px;
+  padding-bottom: $gutter-half;
+
+  @include media(tablet) {
+    margin-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 .side-menu__item {
+  display: inline-block;
+  float: left;
   line-height: 1.5em;
   margin-bottom: 0.5em;
-  padding: 5px 0 5px $gutter-half;
+  padding: 5px $gutter-half;
+
+  @include media(tablet) {
+    display: block;
+    float: none;
+    padding: 5px 0 5px $gutter-half;
+  }
+
+  @include media($max-width: 770px) {
+    &:first-of-type {
+      padding-left: 5px;
+    }
+  }
 
   &:hover {
     background: $highlight-colour;
@@ -26,7 +47,12 @@
 }
 
 .side-menu__item--active {
-  border-left: 3px solid $link-colour;
+  border-bottom: 3px solid $link-colour;
+  @include media(tablet) {
+    border-bottom: none;
+    border-left: 3px solid $link-colour;
+  }
+  
   a {
     color: $text-colour;
   }
