--- a/application/jobs/static/css/components/_skills.scss
+++ b/application/jobs/static/css/components/_skills.scss
@@ -25,8 +25,20 @@
   }
 }
 
+.jd__assoc-skills .skill {
+  a {
+    text-decoration: none;
+  }
+  a:hover {
+    color: $page-colour;
+  }
+}
+
 .jd__assoc-skills .skill--highlighted {
   background: $link-hover-colour;
-  color: $page-colour;
   border-color: $link-hover-colour;
+
+  a {
+    color: $page-colour;
+  }
 }
