make building pass act like a service

--- a/application/signup/templates/basicprofile_checklist.html
+++ b/application/signup/templates/basicprofile_checklist.html
@@ -35,10 +35,10 @@
         </div>
       </details>
       <details class="cl_item">
-        <summary class="cl_item__head cl_item__status">Building pass</summary>
+        <summary class="cl_item__head cl_item__status cl_item__status--{% if building_security_granted %}in-progress{% endif %}">Building pass</summary>
         <div class="cl_item__content">
           <p class="text">Building services require your permission for them to use your profile data to produce a pass for you to access government buildings.</p>
-          <p class="text"><a href="/prejoining/pass_data" class="button">View details</a></p>
+          <p class="text"><a href="/route/services/building_security" class="button">View details</a></p>
         </div>
       </details>
       <details class="cl_item">
