add link to JSON representation of profile data

--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -13,6 +13,7 @@
   <ul>
     <li>
       <a href="/profile/magic">Reset user profile</a>
+      <a href="/profile/print">JSON representation of profile data</a>
     </li>
   </ul>
 
