activity links in banners are underlined

--- a/application/signup/templates/basicprofile.html
+++ b/application/signup/templates/basicprofile.html
@@ -10,7 +10,7 @@
       <div class="column-half">
         <p class="lede">Your profile is incomplete.</p>
         <p>A completed profile helps us match you to jobs in the Civil Service.</p>
-        <p><a href="/signup/basicprofile_jobs">Back to job search</a></p>
+        <p><a class="activity-link" href="/signup/basicprofile_jobs">Back to job search</a></p>
       </div>
       <div class="column-half">
         <div class="grid-row">
