--- a/application/signup/templates/partials/app_success_banner.html
+++ b/application/signup/templates/partials/app_success_banner.html
@@ -2,6 +2,6 @@
   <div class="app-submitted">
     <h3 class="app-submitted__heading heading-large">Application submitted</h3>
     <p>You’ve successfully submitted your application.</p>
-    <p><a href="/signup/basicprofile_jobs/apps?hasOffer=yes">View your applications</a></p>
+    <p><a class="activity-link" href="/signup/basicprofile_jobs/apps?hasOffer=yes">View your applications</a></p>
   </div>
 </div>
