--- a/application/signup/static/css/components/_banners.scss
+++ b/application/signup/static/css/components/_banners.scss
@@ -72,6 +72,7 @@
   padding: 5px;
   opacity: 0.7;
   text-align: center;
+  margin-bottom: 5px;
 
   &:hover {
     opacity: 1;
@@ -80,10 +81,6 @@
   a {
     @include link($colour: $text-colour, $hover-colour: $text-colour, $visited-colour: $text-colour);
   }
-}
-
-.welcome__action__wrap + .welcome__action__wrap {
-  margin-top: 5px;
 }
 
 .welcome__action__wrap img {
