--- a/application/signup/templates/partials/welcome_banner.html
+++ b/application/signup/templates/partials/welcome_banner.html
@@ -2,8 +2,8 @@
   <section class="welcome">
     <h2 class="heading-large welcome__heading">Welcome to GOV.UK</h2>
     <div class="grid-row">
-      <div class="column-half">
-        <p class="lede">Your profile is incomplete.</p>
+      <div class="column-half welcome__msg">
+        <p>Your profile is incomplete.</p>
         <p>A completed profile helps us match you to jobs in the Civil Service.</p>
         <p><a class="activity-link" href="/signup/basicprofile_jobs">Back to job search</a></p>
       </div>
