--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -82,6 +82,7 @@
   <ul>
     <li><a href="/being_a_civil_servant/addreceipt">add receipt (not complete)</a></li>
     <li><a href="/signup/hr_dashboard">HR dashboard (not complete)</a></li>
+    <li><a href="/signup/scs_dashboard">SCS dashboard (not complete)</a></li>
   </ul>
 
   <h3 class="heading-medium">Performance</h3>
